# slack-copilot

./: .dockerignore  .env.example  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  README_CN.md  USAGE.md  docker-compose.yml  main.py  pyproject.toml  setup.sh  slack-copilot.service
src/slack_copilot/: __init__.py  bot.py  config.py  copilot.py
